KeYIDE: Fixed issues in start proof SWTBot test.